reorganised css, services section mostly done

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@ ga('send', 'pageview'); -->
 				</ul>
 			</nav> 
 		</div>	
-		<div id="hamburger">
+		<div id="hamburgerCont">
+			<div id="hamburger_bg">
 				<img id="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
+			</div>
 		</div>
 		<p id="close" onclick="closeChat()"> X</p>
 		<!-- <img onclick="openChat()" id="chatbutton" src="images/chatbutton.png">	 -->
@@ -122,12 +124,25 @@ ga('send', 'pageview'); -->
 			<iframe id="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 		<section id="services_section">
 			<h2>OVERVIEW</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-			</p>
-			<h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit!</h3>
-			<h4>GOLD SERVICE</h4>
-			<h4>SILVER SERVICE</h4>
-			<h4>BRONZE SERVICE</h4>
+			<div class="subSection">
+				<p id="subSection_par">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</p>
+				<h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit!</h3>
+				<div class ="services_main">
+					<div class="serv_sections">
+						<h4>GOLD SERVICE</h4>
+						<p class="service_shortDescr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+					</div>
+					<div class="serv_sections">
+						<h4>SILVER SERVICE</h4>
+						<p class="service_shortDescr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+					</div>
+					<div class="serv_sections">
+						<h4>BRONZE SERVICE</h4>
+						<p class="service_shortDescr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<section id="sdWan_section">
