overview section started, sdwan section done

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ ga('send', 'pageview'); -->
 		<div id="hamburgerCont">
 			<div id="hamburger_bg">
 				<img id="hamburger" onclick="menuSwitch()" src="images/hamburger.png">
+				<img id="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
 		<p id="close" onclick="closeChat()"> X</p>
@@ -146,11 +147,38 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section id="sdWan_section">
-			
+			<div class="sdHome">
+				<h2>SD-WAN</h2>
+				<div class="sdHomeDescr">
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						</p>
+					<h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit!</h3>
+				</div>
+				<div class="sdIconsHome">
+						<img id="hybridIcon" src="images/hybridimg.png">
+						<img id="lifecycleIcon" src="images/lifecycleimg.png">
+						<img id="cloudIcon" src="images/cloudimg.png">
+						<img id="hybridIcon" src="images/hybridimg.png">
+				</div>
+			</div>
 		</section>
 
 		<section id="overview_section">
-			
+			<h2>WHY CHOOSE AEQUOS?</h2>
+			<div class="reasonsHome">
+				<h3>REASON 1</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
+				<h3>REASON 2</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
+				<h3>REASON 3</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
+				<h3>REASON 4</h3>			
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
+				<div class="reasonsEnd">
+					<h4>WHY IS IT SPECIAL WHAT WE DO? LOREM IPSUM DOLOR SIT AMET, CONSECUTER ADIPISCING ELIT.</h4>
+					<h5>MORE <a>ABOUT US</a> AND OUR BUSINESS FOCUSED APPROACH.</h5>
+				</div>
+			</div>
 		</section>
 
 		<section>
