logic of reasons navigation for mobile sorted, needs redesigning based on left position

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <title>AEQUOS</title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
+<!-- <script src="prefixfree.js"></script> -->
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/>
 <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/> -->
 <link rel="icon" 
@@ -168,7 +170,7 @@ ga('send', 'pageview'); -->
 				<h2>WHY CHOOSE AEQUOS?</h2>
 				<div class="reasonsHome">
 					<div class="reasonsHorizontal">
-						<div>
+						<div class="reasonScroll default">
 							<h3>REASON 1</h3>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
 						</div>
@@ -190,8 +192,17 @@ ga('send', 'pageview'); -->
 						<h4>LOREM IPSUM DOLOR SIT AMET, CONSECUTER ADIPISCING ELIT.</h4>
 						<h5>MORE <a>ABOUT US</a> AND OUR BUSINESS FOCUSED APPROACH.</h5>
 					</div>
+				
+				<div class="navReasons">
+					<button class="toLeft"><img class="navi leftArrow" src="images/left.png"></button>
+					<img class="navi blackDot" src="images/blackdot.png">
+					<img class="navi whiteDot" src="images/whitedot.png">
+					<img class="navi whiteDot" src="images/whitedot.png">
+					<img class="navi whiteDot" src="images/whitedot.png">
+					<button class="toRight"><img class="navi rightArrow" src="images/right.png"></button>
+					<!-- <button><i class="fas fa-chevron-right"></i></button> -->
 				</div>
-				<img></img>
+			</div>
 			</div>
 		</section>
 
@@ -330,7 +341,7 @@ ga('send', 'pageview'); -->
 	  
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="main.js"></script>
+	<script src="main.js"></script>
 <!-- <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
