--- a/index.html
+++ b/index.html
@@ -170,19 +170,19 @@ ga('send', 'pageview'); -->
 				<h2>WHY CHOOSE AEQUOS?</h2>
 				<div class="reasonsHome">
 					<div class="reasonsHorizontal">
-						<div class="reasonScroll default">
+						<div class="reasonScroll" id="default">
 							<h3>REASON 1</h3>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
 						</div>
-						<div class="reasonScroll first">
+						<div class="reasonScroll" id="first">
 							<h3>REASON 2</h3>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
 						</div>
-						<div class="reasonScroll second">
+						<div class="reasonScroll" id="second">
 							<h3>REASON 3</h3>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
 						</div>
-						<div class="reasonScroll third">
+						<div class="reasonScroll" id="third">
 							<h3>REASON 4</h3>			
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit </p>
 						</div>
