background shape half-done Sd-Wan section, touch hor scroll done, check normal scrolling

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ ga('send', 'pageview'); -->
 
 	<div class="flex-container">
 		<section id="home_section">
+			<img class="shape" src="images/shape.gif" alt="blue background abstract shape">
 			<div id="main_heading">
 				<h2>AEQUOS</h2>
 				<h1>RIGHT SIZE <br>YOUR NETWORK</h1>
@@ -124,7 +125,7 @@ ga('send', 'pageview'); -->
 				<img id="chattext" src="images/chattext.png">
 	
 			</div>
-			<!-- <iframe id="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe> -->
+			<iframe id="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 		<section id="services_section">
 			<h2>OVERVIEW</h2>
 			<div class="subSection">
@@ -149,6 +150,9 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section id="sdWan_section">
+			<div class="upsideShape">
+					<img class="shape upside" src="images/shape.gif" alt="blue background abstract shape">
+			</div>
 			<div class="sdHome">
 				<h2>SD-WAN</h2>
 				<div class="sdHomeDescr">
