nav and mail changes

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ ga('send', 'pageview'); -->
 						<h3>SOCIAL</h3>
 							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
 							<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="twitterBlack" src="images/social/black/twitter.png"></a>
-							<img alt="Aequos SD-WAN LinkedIn"  id="instaBlack" src="images/social/black/instagram.png">
-							<img id="facebookBlack" src="images/social/black/facebook.png">
+							<!-- <img alt="Aequos SD-WAN LinkedIn"  id="instaBlack" src="images/social/black/instagram.png">
+							<img id="facebookBlack" src="images/social/black/facebook.png"> -->
 					</div>
 			</div>
 
